[project]
name = "gee-redlist-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.0",
    "earthengine-api>=1.6.14",
    "matplotlib>=3.9.0",
    "requests>=2.32.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
