[project]
name = "gee-redlist-python"
version = "0.1.0"
description = "Tools for IUCN Red List analysis using Google Earth Engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cartopy>=0.24.0",
    "earthengine-api>=1.6.14",
    "matplotlib>=3.9.0",
    "requests>=2.32.0",
    "typer>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gee_redlist"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
