[project]
name = "gee-redlist-python"
version = "0.1.8"
description = "Tools for IUCN Red List analysis using Google Earth Engine"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cartopy>=0.24.0",
    "earthengine-api>=1.6.14",
    "geemap>=0.36.6",
    "ipykernel>=7.1.0",
    "matplotlib>=3.9.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "rasterio>=1.3.0",
    "requests>=2.32.0",
    "scipy>=1.11.0",
    "typer>=0.20.0",
    "wkls>=0.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gee_redlist"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
